--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/styles.css">
-        <script src="lib/jquery-2.0.3.min.js"></script>
-        <script src="lib/bootstrap.min.js"></script>
+        <!-- Load the script "js/main.js" as our entry point -->
+        <script data-main="js/main" src="js/lib/require.js"></script>
     </head>
 	<body>
         <div id="header">
@@ -33,12 +33,6 @@
             <% } %>
             </ul>
         </script>
-        
-		<script src="lib/json2.js"></script>
-		<script src="lib/underscore-1.5.2-min.js"></script>
-		<script src="lib/backbone-1.1.0-min.js"></script>
-        <script src="lib/moment.min.js"></script>
-        <script src="js/main.js"></script>
         
 	</body>
 </html>
