Fix showing current day menu open. Add one hidded restaurant. Organize code and remove unsupported stuff.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,19 @@
                   <ul class="language-dropdown-menu dropdown-menu json-lang-menu"></ul>
                 </div>
                 
+                <!-- Useless for now
                 <div class='col-sm-2'>
                     <div class='input-group date' id='datetimepicker1'>
                         <input type='text' class="form-control" data-date-format="YYYY-MM-DD" />
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                         </span>
+                    </div>
+                </div>
+                -->
+
+                <div class='col-sm-2'>
+                    <div class='input-group restaurant' id='restaurant'>
+                        <input type='text' id="restaurantPageId" title="Ravintolan numerokoodi" placeholder="Ravintolan koodi" class="form-control" />
                     </div>
                 </div>
                 <button type="button" class="btn btn-default getMenu">Hae</button>
