Fix parsing data from Amica.
Menus are now in Html element and not in an array.

--- a/index.html
+++ b/index.html
@@ -79,13 +79,8 @@
             
         <!-- Templates -->            
         <script type="text/template" id="tpl-menus">
-            <%= Name %>
-            <ul>
-            <% for(var item in Meals) { %>
-                <% //console.log(Meals[item]); %>
-                <li><%= Meals[item].Name %>, <%= Meals[item].Diets %></li>
-            <% } %>
-            </ul>
+            <% //console.log(Html); %>
+            <%= Html %>
         </script>
             
 	</body>
